Bound transaction thread-scope regression probe